--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>Linear Background Colo Picker</h1>
+	<h1>Linear Background Color Picker</h1>
   <input type="color" id="color1" name="color1" value="#ff0000">
   <input type="color" id="color2" name="color2" value="#0000ff">
   <h2>Current css background color</h2>
