--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<h1>Linear Background Color Picker</h1>
   <input type="color" id="color1" name="color1" value="#ff0000">
   <input type="color" id="color2" name="color2" value="#0000ff">
-  <h2>Current css background color</h2>
+  <h2>This is the css background color</h2>
   <h3></h3>
 </body>
 </html>
