Change page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Background Ganerator</title>
+	<title>Cool Background Ganerator</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
