--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
   <input type="color" id="color2" name="color2" value="#0000ff">
   <h2>This is the css background color</h2>
   <h3></h3>
+
+  <script src="bundled.js"></script>
 </body>
 </html>
