fix missing body id="gradient"

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Cool Background Ganerator</title>
 	<link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="gradient">
 	<h1>Linear Background Color Picker</h1>
   <input type="color" id="color1" name="color1" value="#ff0000">
   <input type="color" id="color2" name="color2" value="#0000ff">
