changing bundled.js to script.js

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <h2>This is the css background color</h2>
   <h3></h3>
 
-  <script src="bundled.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
